# Ping-Pong-using-opengl

./: CMakeLists.txt  README.md  main.cpp
res/: sprite.frag  sprite.vert
src/: Ball.hpp  GLwin.hpp  PingPong.hpp  Shaders.hpp  Slider.hpp  Walls.hpp
